parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    FLOAT
    FOR
    RETURN

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     block -> LBRACE statements RBRACE
Rule 3     statement -> declaration
Rule 4     statement -> assignment
Rule 5     statement -> print_stmt
Rule 6     statement -> if_stmt
Rule 7     statement -> while_stmt
Rule 8     statements -> statements statement
Rule 9     statements -> statement
Rule 10    statement -> BREAK SEMICOLON
Rule 11    statement -> CONTINUE SEMICOLON
Rule 12    declaration -> INT ID ASSIGN expression SEMICOLON
Rule 13    assignment -> ID ASSIGN expression SEMICOLON
Rule 14    print_stmt -> PRINTF LPAREN expression RPAREN SEMICOLON
Rule 15    if_stmt -> IF LPAREN expression RPAREN block
Rule 16    if_stmt -> IF LPAREN expression RPAREN block ELSE block
Rule 17    while_stmt -> WHILE LPAREN expression RPAREN block
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression GT expression
Rule 23    expression -> expression LT expression
Rule 24    expression -> expression GE expression
Rule 25    expression -> expression LE expression
Rule 26    expression -> expression EQ expression
Rule 27    expression -> expression NE expression
Rule 28    expression -> NUMBER
Rule 29    expression -> ID

Terminals, with rules where they appear

ASSIGN               : 12 13
BREAK                : 10
COMMA                : 
CONTINUE             : 11
DIVIDE               : 21
ELSE                 : 16
EQ                   : 26
FLOAT                : 
FOR                  : 
GE                   : 24
GT                   : 22
ID                   : 12 13 29
IF                   : 15 16
INT                  : 12
LBRACE               : 2
LE                   : 25
LPAREN               : 14 15 16 17
LT                   : 23
MINUS                : 19
NE                   : 27
NUMBER               : 28
PLUS                 : 18
PRINTF               : 14
RBRACE               : 2
RETURN               : 
RPAREN               : 14 15 16 17
SEMICOLON            : 10 11 12 13 14
TIMES                : 20
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

assignment           : 4
block                : 15 16 16 17
declaration          : 3
expression           : 12 13 14 15 16 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27
if_stmt              : 6
print_stmt           : 5
program              : 0
statement            : 8 9
statements           : 1 2 8
while_stmt           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (8) statements -> . statements statement
    (9) statements -> . statement
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . print_stmt
    (6) statement -> . if_stmt
    (7) statement -> . while_stmt
    (10) statement -> . BREAK SEMICOLON
    (11) statement -> . CONTINUE SEMICOLON
    (12) declaration -> . INT ID ASSIGN expression SEMICOLON
    (13) assignment -> . ID ASSIGN expression SEMICOLON
    (14) print_stmt -> . PRINTF LPAREN expression RPAREN SEMICOLON
    (15) if_stmt -> . IF LPAREN expression RPAREN block
    (16) if_stmt -> . IF LPAREN expression RPAREN block ELSE block
    (17) while_stmt -> . WHILE LPAREN expression RPAREN block

    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    INT             shift and go to state 11
    ID              shift and go to state 12
    PRINTF          shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    print_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (8) statements -> statements . statement
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . print_stmt
    (6) statement -> . if_stmt
    (7) statement -> . while_stmt
    (10) statement -> . BREAK SEMICOLON
    (11) statement -> . CONTINUE SEMICOLON
    (12) declaration -> . INT ID ASSIGN expression SEMICOLON
    (13) assignment -> . ID ASSIGN expression SEMICOLON
    (14) print_stmt -> . PRINTF LPAREN expression RPAREN SEMICOLON
    (15) if_stmt -> . IF LPAREN expression RPAREN block
    (16) if_stmt -> . IF LPAREN expression RPAREN block ELSE block
    (17) while_stmt -> . WHILE LPAREN expression RPAREN block

    $end            reduce using rule 1 (program -> statements .)
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    INT             shift and go to state 11
    ID              shift and go to state 12
    PRINTF          shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15

    statement                      shift and go to state 16
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    print_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8

state 3

    (9) statements -> statement .

    BREAK           reduce using rule 9 (statements -> statement .)
    CONTINUE        reduce using rule 9 (statements -> statement .)
    INT             reduce using rule 9 (statements -> statement .)
    ID              reduce using rule 9 (statements -> statement .)
    PRINTF          reduce using rule 9 (statements -> statement .)
    IF              reduce using rule 9 (statements -> statement .)
    WHILE           reduce using rule 9 (statements -> statement .)
    $end            reduce using rule 9 (statements -> statement .)
    RBRACE          reduce using rule 9 (statements -> statement .)


state 4

    (3) statement -> declaration .

    BREAK           reduce using rule 3 (statement -> declaration .)
    CONTINUE        reduce using rule 3 (statement -> declaration .)
    INT             reduce using rule 3 (statement -> declaration .)
    ID              reduce using rule 3 (statement -> declaration .)
    PRINTF          reduce using rule 3 (statement -> declaration .)
    IF              reduce using rule 3 (statement -> declaration .)
    WHILE           reduce using rule 3 (statement -> declaration .)
    $end            reduce using rule 3 (statement -> declaration .)
    RBRACE          reduce using rule 3 (statement -> declaration .)


state 5

    (4) statement -> assignment .

    BREAK           reduce using rule 4 (statement -> assignment .)
    CONTINUE        reduce using rule 4 (statement -> assignment .)
    INT             reduce using rule 4 (statement -> assignment .)
    ID              reduce using rule 4 (statement -> assignment .)
    PRINTF          reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 6

    (5) statement -> print_stmt .

    BREAK           reduce using rule 5 (statement -> print_stmt .)
    CONTINUE        reduce using rule 5 (statement -> print_stmt .)
    INT             reduce using rule 5 (statement -> print_stmt .)
    ID              reduce using rule 5 (statement -> print_stmt .)
    PRINTF          reduce using rule 5 (statement -> print_stmt .)
    IF              reduce using rule 5 (statement -> print_stmt .)
    WHILE           reduce using rule 5 (statement -> print_stmt .)
    $end            reduce using rule 5 (statement -> print_stmt .)
    RBRACE          reduce using rule 5 (statement -> print_stmt .)


state 7

    (6) statement -> if_stmt .

    BREAK           reduce using rule 6 (statement -> if_stmt .)
    CONTINUE        reduce using rule 6 (statement -> if_stmt .)
    INT             reduce using rule 6 (statement -> if_stmt .)
    ID              reduce using rule 6 (statement -> if_stmt .)
    PRINTF          reduce using rule 6 (statement -> if_stmt .)
    IF              reduce using rule 6 (statement -> if_stmt .)
    WHILE           reduce using rule 6 (statement -> if_stmt .)
    $end            reduce using rule 6 (statement -> if_stmt .)
    RBRACE          reduce using rule 6 (statement -> if_stmt .)


state 8

    (7) statement -> while_stmt .

    BREAK           reduce using rule 7 (statement -> while_stmt .)
    CONTINUE        reduce using rule 7 (statement -> while_stmt .)
    INT             reduce using rule 7 (statement -> while_stmt .)
    ID              reduce using rule 7 (statement -> while_stmt .)
    PRINTF          reduce using rule 7 (statement -> while_stmt .)
    IF              reduce using rule 7 (statement -> while_stmt .)
    WHILE           reduce using rule 7 (statement -> while_stmt .)
    $end            reduce using rule 7 (statement -> while_stmt .)
    RBRACE          reduce using rule 7 (statement -> while_stmt .)


state 9

    (10) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 17


state 10

    (11) statement -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 18


state 11

    (12) declaration -> INT . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 19


state 12

    (13) assignment -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 20


state 13

    (14) print_stmt -> PRINTF . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 21


state 14

    (15) if_stmt -> IF . LPAREN expression RPAREN block
    (16) if_stmt -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 22


state 15

    (17) while_stmt -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 23


state 16

    (8) statements -> statements statement .

    BREAK           reduce using rule 8 (statements -> statements statement .)
    CONTINUE        reduce using rule 8 (statements -> statements statement .)
    INT             reduce using rule 8 (statements -> statements statement .)
    ID              reduce using rule 8 (statements -> statements statement .)
    PRINTF          reduce using rule 8 (statements -> statements statement .)
    IF              reduce using rule 8 (statements -> statements statement .)
    WHILE           reduce using rule 8 (statements -> statements statement .)
    $end            reduce using rule 8 (statements -> statements statement .)
    RBRACE          reduce using rule 8 (statements -> statements statement .)


state 17

    (10) statement -> BREAK SEMICOLON .

    BREAK           reduce using rule 10 (statement -> BREAK SEMICOLON .)
    CONTINUE        reduce using rule 10 (statement -> BREAK SEMICOLON .)
    INT             reduce using rule 10 (statement -> BREAK SEMICOLON .)
    ID              reduce using rule 10 (statement -> BREAK SEMICOLON .)
    PRINTF          reduce using rule 10 (statement -> BREAK SEMICOLON .)
    IF              reduce using rule 10 (statement -> BREAK SEMICOLON .)
    WHILE           reduce using rule 10 (statement -> BREAK SEMICOLON .)
    $end            reduce using rule 10 (statement -> BREAK SEMICOLON .)
    RBRACE          reduce using rule 10 (statement -> BREAK SEMICOLON .)


state 18

    (11) statement -> CONTINUE SEMICOLON .

    BREAK           reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    CONTINUE        reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    INT             reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    ID              reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    PRINTF          reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    IF              reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    WHILE           reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    $end            reduce using rule 11 (statement -> CONTINUE SEMICOLON .)
    RBRACE          reduce using rule 11 (statement -> CONTINUE SEMICOLON .)


state 19

    (12) declaration -> INT ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 24


state 20

    (13) assignment -> ID ASSIGN . expression SEMICOLON
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 26

state 21

    (14) print_stmt -> PRINTF LPAREN . expression RPAREN SEMICOLON
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 28

state 22

    (15) if_stmt -> IF LPAREN . expression RPAREN block
    (16) if_stmt -> IF LPAREN . expression RPAREN block ELSE block
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 29

state 23

    (17) while_stmt -> WHILE LPAREN . expression RPAREN block
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 30

state 24

    (12) declaration -> INT ID ASSIGN . expression SEMICOLON
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 31

state 25

    (29) expression -> ID .

    SEMICOLON       reduce using rule 29 (expression -> ID .)
    PLUS            reduce using rule 29 (expression -> ID .)
    MINUS           reduce using rule 29 (expression -> ID .)
    TIMES           reduce using rule 29 (expression -> ID .)
    DIVIDE          reduce using rule 29 (expression -> ID .)
    GT              reduce using rule 29 (expression -> ID .)
    LT              reduce using rule 29 (expression -> ID .)
    GE              reduce using rule 29 (expression -> ID .)
    LE              reduce using rule 29 (expression -> ID .)
    EQ              reduce using rule 29 (expression -> ID .)
    NE              reduce using rule 29 (expression -> ID .)
    RPAREN          reduce using rule 29 (expression -> ID .)


state 26

    (13) assignment -> ID ASSIGN expression . SEMICOLON
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    SEMICOLON       shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    GT              shift and go to state 37
    LT              shift and go to state 38
    GE              shift and go to state 39
    LE              shift and go to state 40
    EQ              shift and go to state 41
    NE              shift and go to state 42


state 27

    (28) expression -> NUMBER .

    SEMICOLON       reduce using rule 28 (expression -> NUMBER .)
    PLUS            reduce using rule 28 (expression -> NUMBER .)
    MINUS           reduce using rule 28 (expression -> NUMBER .)
    TIMES           reduce using rule 28 (expression -> NUMBER .)
    DIVIDE          reduce using rule 28 (expression -> NUMBER .)
    GT              reduce using rule 28 (expression -> NUMBER .)
    LT              reduce using rule 28 (expression -> NUMBER .)
    GE              reduce using rule 28 (expression -> NUMBER .)
    LE              reduce using rule 28 (expression -> NUMBER .)
    EQ              reduce using rule 28 (expression -> NUMBER .)
    NE              reduce using rule 28 (expression -> NUMBER .)
    RPAREN          reduce using rule 28 (expression -> NUMBER .)


state 28

    (14) print_stmt -> PRINTF LPAREN expression . RPAREN SEMICOLON
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    GT              shift and go to state 37
    LT              shift and go to state 38
    GE              shift and go to state 39
    LE              shift and go to state 40
    EQ              shift and go to state 41
    NE              shift and go to state 42


state 29

    (15) if_stmt -> IF LPAREN expression . RPAREN block
    (16) if_stmt -> IF LPAREN expression . RPAREN block ELSE block
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    GT              shift and go to state 37
    LT              shift and go to state 38
    GE              shift and go to state 39
    LE              shift and go to state 40
    EQ              shift and go to state 41
    NE              shift and go to state 42


state 30

    (17) while_stmt -> WHILE LPAREN expression . RPAREN block
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    GT              shift and go to state 37
    LT              shift and go to state 38
    GE              shift and go to state 39
    LE              shift and go to state 40
    EQ              shift and go to state 41
    NE              shift and go to state 42


state 31

    (12) declaration -> INT ID ASSIGN expression . SEMICOLON
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    SEMICOLON       shift and go to state 46
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    GT              shift and go to state 37
    LT              shift and go to state 38
    GE              shift and go to state 39
    LE              shift and go to state 40
    EQ              shift and go to state 41
    NE              shift and go to state 42


state 32

    (13) assignment -> ID ASSIGN expression SEMICOLON .

    BREAK           reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    CONTINUE        reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    INT             reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    PRINTF          reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    WHILE           reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 13 (assignment -> ID ASSIGN expression SEMICOLON .)


state 33

    (18) expression -> expression PLUS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 47

state 34

    (19) expression -> expression MINUS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 48

state 35

    (20) expression -> expression TIMES . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 49

state 36

    (21) expression -> expression DIVIDE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 50

state 37

    (22) expression -> expression GT . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 51

state 38

    (23) expression -> expression LT . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 52

state 39

    (24) expression -> expression GE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 53

state 40

    (25) expression -> expression LE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 54

state 41

    (26) expression -> expression EQ . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 55

state 42

    (27) expression -> expression NE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 27
    ID              shift and go to state 25

    expression                     shift and go to state 56

state 43

    (14) print_stmt -> PRINTF LPAREN expression RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 57


state 44

    (15) if_stmt -> IF LPAREN expression RPAREN . block
    (16) if_stmt -> IF LPAREN expression RPAREN . block ELSE block
    (2) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 59

    block                          shift and go to state 58

state 45

    (17) while_stmt -> WHILE LPAREN expression RPAREN . block
    (2) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 59

    block                          shift and go to state 60

state 46

    (12) declaration -> INT ID ASSIGN expression SEMICOLON .

    BREAK           reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    CONTINUE        reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    INT             reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    PRINTF          reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    WHILE           reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 12 (declaration -> INT ID ASSIGN expression SEMICOLON .)


state 47

    (18) expression -> expression PLUS expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    SEMICOLON       reduce using rule 18 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 18 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 18 (expression -> expression PLUS expression .)
    GT              reduce using rule 18 (expression -> expression PLUS expression .)
    LT              reduce using rule 18 (expression -> expression PLUS expression .)
    GE              reduce using rule 18 (expression -> expression PLUS expression .)
    LE              reduce using rule 18 (expression -> expression PLUS expression .)
    EQ              reduce using rule 18 (expression -> expression PLUS expression .)
    NE              reduce using rule 18 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 18 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36

  ! TIMES           [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 33 ]
  ! MINUS           [ shift and go to state 34 ]
  ! GT              [ shift and go to state 37 ]
  ! LT              [ shift and go to state 38 ]
  ! GE              [ shift and go to state 39 ]
  ! LE              [ shift and go to state 40 ]
  ! EQ              [ shift and go to state 41 ]
  ! NE              [ shift and go to state 42 ]


state 48
